# MutationScan

./: .dockerfile  .dockerignore  .gitignore  CHANGELOG.md  CLEANUP_README.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  Docker_Structure.md  Dockerfile  Dockerfile.genefinder  Dockerfile.genomeextractor  FINAL_DELIVERABLE.md  LICENSE  QA_CASUALTY_REPORT.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  RELEASE_NOTES.md  SECURITY.md  SIMPLIFIED_RUN_GUIDE.md  Snakefile  TEST_RUN_REPORT.md  TOOLKIT_USAGE.md  WARP.md  audit_report.txt  cleanup_repository.ps1  cleanup_repository.sh  debug_mutationscan.bat  demo_accessions.txt  demo_pipeline.py  docker-compose.yml  environment.yml  filter_modern_strains.py  final_clinical_dataset.csv  install.bat  install.sh  mutationscan.bat  mutationscan.ps1  pyproject.toml  requirements.genefinder.txt  (+8 more)
.github/: config.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml  tests.yml  validate_dependencies.yml
.snakemake/metadata/: ZGF0YS9yZXN1bHRzL011dGF0ZWRfU3RydWN0dXJlcw==  ZGF0YS9yZXN1bHRzL0NvbnRyb2xTY2FuX05ldHdvcmtz  ZGF0YS9yZXN1bHRzL1JFQURNRV9CaW9waHlzaWNzLnR4dA==  ZGF0YS9yZXN1bHRzL2N1cmF0ZWRfbWV0YWRhdGEuY3N2  ZGF0YS9yZXN1bHRzL3Byb3RlaW5z  ZGF0YS9yZXN1bHRzL3JlZnM=  ZGF0YS9yZXN1bHRzLzFfZ2Vub21pY3NfcmVwb3J0LmNzdg==  ZGF0YS9yZXN1bHRzLzJfZXBpc3Rhc2lzX25ldHdvcmtzLmNzdg==  ZGF0YS9yZXN1bHRzLzNfYmlvcGh5c2ljc19kb2NraW5nLmNzdg==  tmpzz86jc_i.ZGF0YS9y
.snakemake/scripts/: tmp41y4g1ar.01_acquire_genomes.py  tmp71lgdpvj.02_extract_and_call.py
ABRicate-Automator/: __init__.py  pyproject.toml  setup.py
FastaAAExtractor/: __init__.py  pyproject.toml  setup.py
config/: README.md  config.yaml  drug_mapping.json  target_genes.txt
data/: README.md  processed_features.csv
data/config/: acrR_targets.txt
data/databases/: .gitkeep
data/genomes/: .gitkeep
data/ligands/: ligand.pdbqt  ligand.sdf  ligand_docked.pdbqt
data/output/: .gitkeep
data/proteins/: GCA_023554695.1_acrB.faa  GCF000005845.2_TolC.faa  GCF000005845.2_acrB.faa  GCF_000005845.2_TolC.faa  GCF_000005845.2_acrB.faa  GCF_022605185.1_acrB.faa  GCF_022605205.1_acrB.faa  GCF_022605225.1_acrB.faa  GCF_022605245.1_acrB.faa  (+23 more)
data_input/: accession_list.txt  gene_list.txt
docker/: README.md  requirements.genomeextractor.txt
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CLI_WIZARD_GUIDE.md  DEPENDENCY_FIX_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  GENOME_EXTRACTOR_API.md  GENOME_EXTRACTOR_REFACTORING.md  GIT_DEPENDENCY_TROUBLESHOOTING.md  GUI_USER_GUIDE.md  INDEX.md  INSTALLATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SETUP_COMPLETE.md  TEST_PLAN.md
examples/: README.md  demo_workflow.py  gene_list.txt  genome_extractor_example.py  quick_start.py
federated_genome_extractor/: __init__.py  pyproject.toml  setup.py
federated_genome_extractor/clients/: __init__.py
models/: README.md  benchmark_results.csv  zoo_performance.csv
reference/: acrR.faa  marR.faa
scripts/: run_docker.ps1
src/: main.py
subscan/: PRODUCTION_GUIDE.md  __init__.py  config.yaml  demo_accessions.txt  demo_config.json  pyproject.toml  pytest.ini  requirements.txt  research_accessions.txt  setup.cfg  setup.py  setup_mutationscan.py  test_output.tsv  validate_git_dependencies.py  validate_installation.py
subscan/analyzer/: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
subscan/analyzer/src/analyzer/: __init__.py  cli.py  engine.py
subscan/analyzer/tests/: conftest.py
subscan/analyzer/tools/: run_analyzer.py
subscan/demo_results/mutationscan_run_20250925_190650/01_harvester_results/: 316994385.fasta  genome_manifest.json
subscan/demo_results/mutationscan_run_20250925_190650/02_annotator_results/: annotation_manifest.json
subscan/demo_results/mutationscan_run_20250925_190650/03_extractor_results/: protein_manifest.json
subscan/full_test/mutationscan_run_20250925_185616/01_harvester_results/: 01_harvester_results_metadata.csv  genome_manifest.json
subscan/full_test/mutationscan_run_20250925_185616/02_annotator_results/: annotation_manifest.json
subscan/full_test/mutationscan_run_20250925_185616/03_extractor_results/: protein_manifest.json
subscan/gui/: __init__.py  app.py  launch.py
subscan/gui/templates/: pipeline.html  results.html  setup.html
subscan/ncbi_genome_extractor/: config.py  ncbi_genome_extractor.py
subscan/sample_data/: accessions_list.txt  gene_list.txt  sample_accessions.txt
subscan/src/subscan/: __init__.py  cooccurrence.py  report_template.html  reporting.py  utils.py
subscan/src/subscan/domino_tools/abricate_automator/: __init__.py
subscan/src/subscan/domino_tools/analyzer/: __init__.py
subscan/src/subscan/domino_tools/fasta_extractor/: __init__.py
subscan/src/subscan/domino_tools/ncbi_extractor/: __init__.py
subscan/src/subscan/domino_tools/wildtype_aligner/: __init__.py
subscan/test_annotate/: annotation_manifest.json
subscan/test_extract/: protein_manifest.json
subscan/test_harvest/: genome_manifest.json
subscan/tests/: conftest.py
subscan/tools/: FULL_TEST_README.md  SMOKE_TEST_README.md  __init__.py  check_dependencies.py  check_structure.py  comprehensive_final_tests.py  full_test_dominos.py  health_check.py  quick_validation.py  run_aligner.py  run_analyzer.py  run_annotator.py  run_annotator_old.py  run_cooccurrence_analyzer.py  run_extractor.py  run_harvester.py  run_pipeline.py  run_reporter.py  run_wizard.py  smoke_test_dominos.py  smoke_test_extractor.py  wildtype-aligner.bat
subscan/tools/comprehensive_test_data/: basic_genes.txt  comprehensive_genes.txt  extended_genes.txt  large_accessions.txt  medium_accessions.txt
temp/: autoscan_bridge_examples.py
temp_data_collection/: BVBRC_genome_amr.csv  fetch_metadata.py  geospatial_metadata_test.csv  get_refs.py  master_geospatial_metadata.csv  pure_indian_metadata.csv
tests/: conftest.py  test_genome_extractor.py
utility scripts/: mutationscan_support_toolkit.py
wildtype-aligner/: __init__.py  pyproject.toml  setup.py
(+86 files in other folders)
