[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mutation_scan"
version = "1.0.0"
description = "Democratized Bioinformatics Pipeline for AMR Detection"
authors = [
  { name = "Vihaan Kulkarni", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.79",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "ncbi-datasets-pylib>=16.0.0",
    "requests",
    "pyyaml"
]

[tool.setuptools.packages.find]
where = ["src"]
