[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abricate-automator"
version = "1.0.0"
description = "Automated AMR gene annotation using ABRicate for the MutationScan pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Vihaan Kulkarni", email = "vihaankulkarni29@gmail.com"}
]
keywords = [
    "bioinformatics", 
    "antimicrobial-resistance",
    "abricate",
    "amr-annotation",
    "genomics"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=1.3.0,<3.0",
    "biopython>=1.79,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/vihaankulkarni29/ABRicate-Automator"
Repository = "https://github.com/vihaankulkarni29/ABRicate-Automator.git"
Issues = "https://github.com/vihaankulkarni29/ABRicate-Automator/issues"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]