[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federated_genome_extractor"
version = "1.0.0"
description = "Federated genome extraction tool for downloading genomes from multiple bioinformatics databases (NCBI, BV-BRC, EnteroBase, PATRIC)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Vihaan Kulkarni", email = "vihaankulkarni29@gmail.com"}
]
keywords = [
    "bioinformatics", 
    "genomics", 
    "ncbi", 
    "genome-extraction", 
    "antimicrobial-resistance", 
    "federated-search"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "biopython>=1.79,<2.0",
    "requests>=2.25.0,<3.0", 
    "urllib3>=1.26.0,<3.0",
    "tqdm>=4.62.0,<5.0",
    "pandas>=1.3.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vihaankulkarni29/federated_genome_extractor"
Documentation = "https://github.com/vihaankulkarni29/federated_genome_extractor/blob/main/README.md"
Repository = "https://github.com/vihaankulkarni29/federated_genome_extractor.git"
Issues = "https://github.com/vihaankulkarni29/federated_genome_extractor/issues"

[project.scripts]
federated-genome-extractor = "harvester:main"

[tool.setuptools]
packages = ["federated_genome_extractor", "federated_genome_extractor.clients"]

[tool.setuptools.package-dir]
federated_genome_extractor = "."
"federated_genome_extractor.clients" = "clients"

[tool.setuptools.package-data]
federated_genome_extractor = ["*.py", "*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"