[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subscan"
version = "1.0.0"
authors = [
  { name="Your Name", email="youremail@example.com" },
]
description = "A modular pipeline for targeted, reference-driven mutation analysis of AMR genes."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
