[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mutationscan"
version = "1.0.0"
authors = [
  { name="MutationScan Development Team", email="vihaankulkarni29@gmail.com" },
]
description = "A comprehensive pipeline for targeted, reference-driven mutation analysis of antimicrobial resistance genes."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["bioinformatics", "antimicrobial-resistance", "mutation-analysis", "genomics", "pipeline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    # Core Scientific Computing
    "pandas>=1.3.0,<3.0",
    "biopython>=1.79,<2.0",
    "numpy>=1.21.0,<2.0",
    
    # Web and Network Communication
    "requests>=2.25.0,<3.0",
    "urllib3>=1.26.0,<3.0",
    
    # Progress and User Experience
    "tqdm>=4.64.0,<5.0",
    "colorama>=0.4.4,<1.0",
    
    # File and Data Processing
    "openpyxl>=3.0.0,<4.0",
    
    # HTML Reporting and Visualization
    "jinja2>=3.0.0,<4.0",
    "plotly>=5.0.0,<6.0",
    
    # GitHub-based Domino Tools
    "ncbi-genome-extractor @ git+https://github.com/vihaankulkarni29/ncbi_genome_extractor.git",
    "abricate-automator @ git+https://github.com/vihaankulkarni29/ABRicate-Automator.git",
    "fasta-aa-extractor @ git+https://github.com/vihaankulkarni29/FastaAAExtractor.git",
    "wildtype-aligner @ git+https://github.com/vihaankulkarni29/wildtype-aligner.git",
    "subscan-analyzer @ git+https://github.com/vihaankulkarni29/SubScan.git"
]

[project.urls]
Homepage = "https://github.com/vihaankulkarni29/MutationScan"
Documentation = "https://github.com/vihaankulkarni29/MutationScan/blob/main/README.md"
Repository = "https://github.com/vihaankulkarni29/MutationScan.git"
Issues = "https://github.com/vihaankulkarni29/MutationScan/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
mutationscan = "subscan.tools.run_pipeline:main"
