[metadata]
# Primary metadata is in pyproject.toml.

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pandas
    biopython
    tqdm
    openpyxl
    requests
    # All domino tools are now included as local modules

[options.packages.find]
where = src
