[metadata]
# MutationScan Pipeline Package Configuration
# This file defines the Python package structure for the subscan pipeline
name = mutationscan-pipeline
version = 1.0.0
description = Comprehensive AMR Analysis Pipeline for Genome Mutation Detection
long_description = file: README.md
long_description_content_type = text/markdown
author = MutationScan Development Team
author_email = vihaankulkarni29@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/vihaankulkarni29/MutationScan
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    # Core dependencies - these MUST match requirements.txt
    biopython>=1.79,<2.0
    pandas>=1.3.0,<3.0
    numpy>=1.21.0,<2.0
    requests>=2.25.0,<3.0
    urllib3>=1.26.0,<3.0
    tqdm>=4.64.0,<5.0
    colorama>=0.4.4,<1.0
    openpyxl>=3.0.0,<4.0
    xlsxwriter>=3.0.0,<4.0
    jinja2>=3.0.0,<4.0
    plotly>=5.6.0,<6.0
    matplotlib>=3.5.0,<4.0
    seaborn>=0.11.0,<1.0
    click>=8.0.0,<9.0
    PyYAML>=6.0,<7.0
    jsonschema>=4.4.0,<5.0
    joblib>=1.1.0,<2.0
    multiprocess>=0.70.0,<1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mutationscan = subscan.tools.run_pipeline:main

[options.extras_require]
dev =
    pytest>=7.0.0,<9.0
    pytest-cov>=4.0.0,<6.0
    black>=22.0.0,<24.0
    pylint>=2.12.0,<4.0
    mypy>=0.950,<2.0
    isort>=5.10.0,<6.0

[egg_info]
tag_build = 
tag_date = 0