[metadata]
# MutationScan Pipeline Package Configuration
# This file defines the Python package structure for the subscan pipeline
name = mutationscan-pipeline
version = 1.0.0
description = Comprehensive AMR Analysis Pipeline for Genome Mutation Detection
long_description = file: README.md
long_description_content_type = text/markdown
author = MutationScan Development Team
author_email = vihaankulkarni29@gmail.com
license = MIT
license_files = LICENSE
url = https://github.com/vihaankulkarni29/MutationScan
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:
install_requires =
    pandas>=1.3.0,<3.0
    biopython>=1.79,<2.0
    numpy>=1.21.0,<2.0
    requests>=2.25.0,<3.0
    urllib3>=1.26.0,<3.0
    tqdm>=4.64.0,<5.0
    colorama>=0.4.4,<1.0
    openpyxl>=3.0.0,<4.0
    jinja2>=3.0.0,<4.0
    plotly>=5.0.0,<6.0
    # Git-based domino tools (VCS requirements)
    federated-genome-extractor @ git+https://github.com/vihaankulkarni29/federated_genome_extractor.git
    abricate-automator @ git+https://github.com/vihaankulkarni29/ABRicate-Automator.git
    fasta-aa-extractor @ git+https://github.com/vihaankulkarni29/FastaAAExtractor.git
    wildtype-aligner @ git+https://github.com/vihaankulkarni29/wildtype-aligner.git
    subscan-analyzer @ git+https://github.com/vihaankulkarni29/SubScan.git

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mutationscan = subscan.tools.run_pipeline:main




[egg_info]
tag_build = 
tag_date = 0