[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildtype-aligner"
version = "1.0.0"
description = "Wild-type sequence alignment tool for the MutationScan pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Vihaan Kulkarni", email = "vihaankulkarni29@gmail.com"}
]
keywords = [
    "bioinformatics",
    "sequence-alignment",
    "mafft",
    "wildtype",
    "genomics"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "biopython>=1.79,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/vihaankulkarni29/wildtype-aligner"
Repository = "https://github.com/vihaankulkarni29/wildtype-aligner.git"
Issues = "https://github.com/vihaankulkarni29/wildtype-aligner/issues"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]