[metadata]
name = subscan-analyzer
author = SubScan Development Team
author_email = subscan@genomics.local
description = SubScan Pipeline - Domino 5: The Analyzer - Mutation Detection and Co-occurrence Analysis Engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/subscan/analyzer
project_urls =
    Bug Reports = https://github.com/subscan/analyzer/issues
    Source = https://github.com/subscan/analyzer
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.3.0
    numpy>=1.20.0
    biopython>=1.78
    tqdm>=4.60.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    flake8>=3.8
    mypy>=0.800

[options.entry_points]
console_scripts =
    subscan-analyzer = analyzer.cli:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    .tox